fix: add underline offset for links
Without this the underline is too close on Chrome.

--- a/src/content/popup/popup.css
+++ b/src/content/popup/popup.css
@@ -678,6 +678,7 @@
   .w-kanji .wk-level {
     color: var(--primary-highlight);
     border: 1px solid var(--primary-highlight);
+    text-underline-offset: 2px;
   }
 
   /*
